# nous

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  principles.md
.github/workflows/: ci.yml  publish.yml
bindings/node/: Cargo.toml  README.md  package-lock.json  package.json
bindings/node/.cargo/: config.toml
bindings/node/__test__/: regulator.test.mjs
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python-langchain/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
bindings/python-langchain/docs/: announcements.md
bindings/python-langchain/examples/: anthropic_tools_agent.py  basic_smoke.py  compare_with_max_iterations.py  crewai_agent.py  langgraph_agent.py  openai_tools_agent.py
bindings/python-langchain/src/noos_langchain/: __init__.py  _compat.py  callback.py
bindings/python-langchain/tests/: test_callback.py
bindings/python/examples/: basic.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_regulator.py
docs/: app-contract.md  calibration.md  migrating.md  publish-setup.md  regulator-design.md  regulator-guide.md
examples/: agent_simulation.rs  allostatic_demo.rs  bottleneck_eval.rs  cognitive_explorer.rs  delta_modulation.rs  diagnose_harm.rs  eval_intervention.rs  gate_classification_diagnose.rs  mamba_cognitive.rs  ollama_chat.rs  perplexity_eval.rs  probe_hidden_states.rs  regulator_correction_memory_demo.rs  regulator_cost_break_demo.rs  regulator_prompt_intervention_demo.rs  regulator_scope_drift_demo.rs  regulator_tool_loop_demo.rs  task_eval_abstention.rs  task_eval_budget_sweep.rs  task_eval_conservation.rs  task_eval_diagnose.rs  task_eval_fatigue.rs  task_eval_fatigue_gradual.rs  task_eval_multi_signal.rs  task_eval_real_llm_abstention.rs  task_eval_real_llm_multi_signal.rs  task_eval_real_llm_regulator.rs  task_eval_synthetic.rs  train_gate.rs
examples/regulator_common/: mod.rs
src/: errors.rs  lib.rs  session.rs
src/ai/: intervention.rs  mod.rs  provider.rs  request.rs  response.rs
src/cognition/: adaptive_thresholds.rs  belief_state.rs  convergence.rs  delta_modulation.rs  detector.rs  dynamics.rs  emotional.rs  hs_arousal.rs  intervention.rs  locus_coeruleus.rs  mod.rs  resource_allocator.rs  signals.rs  thalamic_gate.rs  world_model.rs
src/inference/: bottleneck.rs  cognitive_gate.rs  cognitive_model.rs  engine.rs  mamba.rs  mod.rs  model.rs  sampler.rs  tokenizer.rs
src/kernel/: events.rs  mod.rs  pipeline.rs  plugin.rs
src/math/: mod.rs  softmax.rs  vector.rs
src/memory/: consolidation.rs  importance.rs  mod.rs  retrieval.rs  store.rs
src/regulator/: correction.rs  cost.rs  mod.rs  otel.rs  scope.rs  state.rs  token_stats.rs  tools.rs
src/types/: belief.rs  gate.rs  intervention.rs  memory.rs  mod.rs  world.rs
tests/: allostatic_flow.rs  memory_flow.rs
