[package]
name = "noos-node"
version = "0.1.0"
edition = "2021"
publish = false
description = "Node.js / TypeScript bindings for the Noos LLM-agent reliability crate"
license = "MIT"
authors = ["TRIANGLE.TECHNOLOGY COMPANY LIMITED"]
repository = "https://github.com/Triangle-Technology/noos"

# The extension module is the Node native addon. `cdylib` produces a
# .node (renamed from .so / .dll / .dylib) that Node loads via
# `require()` or `import`.
[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs 3.x is preferred because it delay-loads libnode at runtime
# on Windows-MSVC. This crate has no local `build.rs` — `napi-build
# 2.3.1` is still pulled as a transitive build-dep of `napi` and runs
# cleanly on Linux / macOS / Windows-MSVC. Only Windows-GNU local
# builds panic (libnode.dll not on the GNU search path); CI uses
# ubuntu-latest so the published path is unblocked.
#
# Feature `napi6` exports `BigInt` (gated by `#[cfg(feature =
# "napi6")]` in bindgen_runtime/js_values.rs:43). `napi4` was
# insufficient — ToolResult.duration_ms uses BigInt for u64 crossing.
napi = { version = "3", default-features = false, features = ["napi6"] }
napi-derive = "3"
serde_json = "1"
noos = { path = "../.." }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
