[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noos-langchain"
version = "0.1.0"
description = "LangChain callback handler for Noos — pre-delivery halt/warn decisions from an agent's LLM+tool event stream"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "TRIANGLE.TECHNOLOGY COMPANY LIMITED" }]
keywords = ["llm", "agent", "langchain", "langgraph", "reliability", "circuit-breaker", "regulator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "noos>=0.1.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/Triangle-Technology/noos"
Repository = "https://github.com/Triangle-Technology/noos"
"Rust crate" = "https://crates.io/crates/noos"

[tool.hatch.build.targets.wheel]
packages = ["src/noos_langchain"]

[tool.hatch.build.targets.sdist]
include = [
    "src/noos_langchain",
    "examples",
    "tests",
    "README.md",
    "LICENSE",
]
